@@ -2,17 +2,16 @@ package com.tns;
 
 import java.io.*;
 
-import com.tns.internal.Plugin;
-
 import android.content.Context;
 import android.content.pm.ApplicationInfo;
 import android.content.pm.PackageInfo;
 import android.content.pm.PackageManager;
 import android.content.pm.PackageManager.NameNotFoundException;
 import android.os.Bundle;
-import android.util.Log;
 
 import androidx.core.content.pm.PackageInfoCompat;
+
+import com.tns.internal.Plugin;
 
 public final class Util {
     private Util() {
@@ -57,7 +56,7 @@ public final class Util {
 
         try {
             Class<?> liveSyncPluginClass = Class.forName(pluginClassName);
-            Plugin p = (Plugin) liveSyncPluginClass.newInstance();
+            Plugin p = (Plugin) liveSyncPluginClass.getDeclaredConstructor().newInstance();
             success = p.execute(context);
         } catch (Exception e) {
             if (Util.isDebuggableApp(context) && logger.isEnabled()) {
